samples/_failures_safe/1761497381_343ad2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1686638.c: In function ‘main’:
./samples/SAFE/__tmp_b1686638.c:196:5: error: expected ‘,’ or ‘;’ at end of input
  196 |     int token_count = tokenize
      |     ^~~
./samples/SAFE/__tmp_b1686638.c:196:5: error: expected declaration or statement at end of input
